--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   path: ^1.9.1
   provider: ^6.1.2
+  shared_preferences: ^2.5.2
   window_manager: ^0.4.3
 
 dev_dependencies:
