--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,4 +53,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Spell check repository
-        uses: crate-ci/typos@v1.29.10
+        uses: codespell-project/actions-codespell@v2
+        with:
+          check_filenames: true
+          check_hidden: true
