--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   jpeg_encode: ^1.0.1
   path: ^1.9.1
   provider: ^6.1.2
+  quiver: ^3.2.2
   window_manager: ^0.4.3
 
 dev_dependencies:
