--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,11 +1,10 @@
-name: Build App Installer
+name: Build
 
 on:
   push:
     branches: ["main"]
-
-permissions:
-  contents: write
+  pull_request:
+    branches: ["main"]
 
 jobs:
   windows:
