--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   file_picker: ^9.0.0
   flutter:
     sdk: flutter
+  freezed_annotation: ^3.0.0
   jpeg_encode: ^1.0.1
   path: ^1.9.1
   provider: ^6.1.2
@@ -20,6 +21,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  build_runner: ^2.4.15
+  freezed: ^3.0.2
 
 flutter:
   uses-material-design: true
